# qslsaver

./: CMakeLists.txt  README.md  eventfilter.cpp  eventfilter.h  main.cpp  options.cpp  options.h  options.ui  prefs.cpp  watcher.cpp  watcher.h  worker.cpp  worker.h
data/: qslsaver-prefs.desktop.in  qslsaver.desktop.in
debian/: changelog  control  copyright
